yaml/alb/gateway-virtualservice_bk.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-vs
spec:
  hosts:
  - "admin.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: api-admin.default.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-vs
spec:
  hosts:
  - "user.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: api-user.default.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-vs
spec:
  hosts:
  - "www.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: svc-front.default.svc.cluster.local
           port:
             number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devadmin-vs
spec:
  hosts:
  - "devadmin.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: dev-admin.default.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devuser-vs
spec:
  hosts:
  - "devuser.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: dev-user.default.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devfront-vs
spec:
  hosts:
  - "devwww.profilehub.info"
  gateways:
  - istio-gateway
  http:
  - route:
      - destination:
           host: dev-front.default.svc.cluster.local
           port:
             number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-vs
spec:
  hosts:
  - "jenkins.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: jenkins.devops.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
spec:
  hosts:
  - "argocd.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: argocd-server.devops.svc.cluster.local
           port:
             number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vs
spec:
  hosts:
  - "kibana.profilehub.info"
  gateways:
  - httpbin-gateway
  http:
  - route:
      - destination:
           host: logging-kibana.devops.svc.cluster.local
           port:
             number: 5601
